--- a/.env
+++ b/.env
@@ -1,15 +1,21 @@
-MAX_STEPS=200
+# MAX_STEPS=200
 
 #MUST BE A PERFECT SQUARE
 POPULATION_SIZE=
 POPULATION_PRESET=0
 
-SPREAD_RADIUS=1
+SPREAD_RADIUS=3
 
 HYGIENE_DISREGARD=0.5
 
-HOSPITAL_EFFECTIVENESS=0.8
-HOSPITAL_CAPACITY=300
+HOSPITAL_EFFECTIVENESS=1
+HOSPITAL_CAPACITY=35
 
 INCUBATION_PERIOD=6
 INFECTION_PERIOD=41
+
+QUARANTINE_EFFECTIVENESS=0.5
+QUARANTINE_PERIOD=5
+QUARANTINE_DELAY=2
+QUARANTINE_TYPE=FIXED_PERCENTAGE
+QUARANTINE_PERCENTAGE=0.1
