--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {   
     "extends": [
-        "eslint:recommended"
+        "eslint:recommended",
+        "plugin:react/recommended"
     ],
 
     "env": {
         "node": true,
+        "browser": true,
         "es6": true,
         "jest": true
     },
@@ -16,7 +18,10 @@
 
     "parserOptions": {
         "ecmaVersion": 9,
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     },
 
     "rules": {
