--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   },
   "homepage": "https://github.com/imnotteixeira/covid-19-simulator-cli#readme",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.20.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
     "@imnotteixeira/covid-19-simulator": "^0.5.4",
+    "@imnotteixeira/covid-19-simulator-ui-components": "^0.1.2",
+    "babel-loader": "^8.1.0",
     "dotenv-flow": "^3.1.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
