--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # MAX_STEPS=200
 
 #MUST BE A PERFECT SQUARE
-POPULATION_SIZE=
+POPULATION_SIZE=100
 POPULATION_PRESET=0
 
 SPREAD_RADIUS=3
@@ -9,7 +9,7 @@ SPREAD_RADIUS=3
 HYGIENE_DISREGARD=0.5
 
 HOSPITAL_EFFECTIVENESS=1
-HOSPITAL_CAPACITY=35
+HOSPITAL_CAPACITY=1
 
 INCUBATION_PERIOD=6
 INFECTION_PERIOD=41
@@ -19,3 +19,6 @@ QUARANTINE_PERIOD=5
 QUARANTINE_DELAY=2
 QUARANTINE_TYPE=FIXED_PERCENTAGE
 QUARANTINE_PERCENTAGE=0.1
+
+TEST_RATE=5
+TEST_COOLDOWN=7
