--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@imnotteixeira/covid-19-simulator-cli",
-  "version": "0.4.1",
+  "version": "0.5.0",
   "description": "CLI for the covid-19 simulator https://github.com/imnotteixeira/covid-19-simulator.js",
   "main": "src/index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "@imnotteixeira/covid-19-simulator": "^0.5.4",
     "@imnotteixeira/covid-19-simulator-ui-components": "^0.1.2",
     "babel-loader": "^8.1.0",
+    "commander": "^5.1.0",
     "dotenv-flow": "^3.1.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
