Added possibility of receiving Sim. Preset in .env

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-# MAX_STEPS=200
+# CONTROL, GOOD_HYGIENE, RELAXED_QUARANTINE, STRICT_QUARANTINE, CARRIERS_QUARANTINE
+# SIMULATION_PRESET=CONTROL
 
-#MUST BE A PERFECT SQUARE
-POPULATION_SIZE=400
-POPULATION_PRESET=0
+MAX_STEPS=200
+
+# MUST BE A PERFECT SQUARE
+POPULATION_SIZE=100
+POPULATION_PRESET=SPAIN
 
 SPREAD_RADIUS=1
 
