--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@imnotteixeira/covid-19-simulator-cli",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "CLI for the covid-19 simulator https://github.com/imnotteixeira/covid-19-simulator.js",
   "main": "src/index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "@babel/preset-react": "^7.9.4",
     "@imnotteixeira/covid-19-simulator": "^0.5.4",
     "@imnotteixeira/covid-19-simulator-ui-components": "^0.1.2",
+    "@material-ui/core": "^4.10.1",
     "babel-loader": "^8.1.0",
     "commander": "^5.1.0",
     "dotenv-flow": "^3.1.0",
