Added configuration for zones

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # CONTROL, GOOD_HYGIENE, RELAXED_QUARANTINE, STRICT_QUARANTINE, CARRIERS_QUARANTINE
 # SIMULATION_PRESET=CONTROL
 
-MAX_STEPS=200
+# MAX_STEPS=200
 
 # MUST BE A PERFECT SQUARE
 POPULATION_SIZE=100
-POPULATION_PRESET=SPAIN
+POPULATION_PRESET=GERMANY
 
-SPREAD_RADIUS=1
+SPREAD_RADIUS=2
 
 HYGIENE_DISREGARD=0.5
 
@@ -20,8 +20,15 @@ INFECTION_PERIOD=41
 QUARANTINE_EFFECTIVENESS=0.5
 QUARANTINE_PERIOD=5
 QUARANTINE_DELAY=2
-QUARANTINE_TYPE=CONFIRMED_CARRIERS_ONLY
+# NONE, FIXED_PERCENTAGE, CONFIRMED_CARRIERS_ONLY
+QUARANTINE_TYPE=NONE
 QUARANTINE_PERCENTAGE=0.1
 
-TEST_RATE=0
-TEST_COOLDOWN=7
+TEST_RATE=30
+TEST_COOLDOWN=2
+
+NUM_ZONES = 25
+# BASIC, BASIC_CAUTIOUS, ADVANCED_CAUTIOUS, FULL_LOCKDOWN
+ZONE_ISOLATION_BEHAVIOR=FULL_LOCKDOWN
+ZONE_ISOLATION_THRESHOLD=0.2
+ZONE_ISOLATION_TIMEOUT=15
