Added population density config option

--- a/.env
+++ b/.env
@@ -32,3 +32,5 @@ NUM_ZONES = 25
 ZONE_ISOLATION_BEHAVIOR=FULL_LOCKDOWN
 ZONE_ISOLATION_THRESHOLD=0.2
 ZONE_ISOLATION_TIMEOUT=15
+
+POPULATION_DENSITY=0.2
