Added aditional metrics

--- a/.env
+++ b/.env
@@ -4,22 +4,22 @@
 # MAX_STEPS=200
 
 # MUST BE A PERFECT SQUARE
-POPULATION_SIZE=100
-POPULATION_PRESET=GERMANY
+POPULATION_SIZE=10000
+POPULATION_PRESET=ITALY
 
 SPREAD_RADIUS=2
 
-HYGIENE_DISREGARD=0.5
+HYGIENE_DISREGARD=1
 
 HOSPITAL_EFFECTIVENESS=1
-HOSPITAL_CAPACITY=0
+HOSPITAL_CAPACITY=500
 
 INCUBATION_PERIOD=6
 INFECTION_PERIOD=41
 
-QUARANTINE_EFFECTIVENESS=0.5
-QUARANTINE_PERIOD=5
-QUARANTINE_DELAY=2
+QUARANTINE_EFFECTIVENESS=0.8
+QUARANTINE_PERIOD=14
+QUARANTINE_DELAY=3
 # NONE, FIXED_PERCENTAGE, CONFIRMED_CARRIERS_ONLY
 QUARANTINE_TYPE=NONE
 QUARANTINE_PERCENTAGE=0.1
@@ -30,7 +30,7 @@ TEST_COOLDOWN=2
 NUM_ZONES = 25
 # BASIC, BASIC_CAUTIOUS, ADVANCED_CAUTIOUS, FULL_LOCKDOWN
 ZONE_ISOLATION_BEHAVIOR=FULL_LOCKDOWN
-ZONE_ISOLATION_THRESHOLD=0.2
+ZONE_ISOLATION_THRESHOLD=0.1
 ZONE_ISOLATION_TIMEOUT=15
 
-POPULATION_DENSITY=0.2
+POPULATION_DENSITY=1
