--- a/.env
+++ b/.env
@@ -4,33 +4,33 @@
 # MAX_STEPS=200
 
 # MUST BE A PERFECT SQUARE
-POPULATION_SIZE=10000
-POPULATION_PRESET=ITALY
+POPULATION_SIZE=46656
+POPULATION_PRESET=SPAIN
 
-SPREAD_RADIUS=2
+SPREAD_RADIUS=6
 
-HYGIENE_DISREGARD=1
+HYGIENE_DISREGARD=0.05
 
-HOSPITAL_EFFECTIVENESS=1
-HOSPITAL_CAPACITY=500
+HOSPITAL_EFFECTIVENESS=0.7
+HOSPITAL_CAPACITY=139
 
 INCUBATION_PERIOD=6
 INFECTION_PERIOD=41
 
 QUARANTINE_EFFECTIVENESS=0.8
-QUARANTINE_PERIOD=14
-QUARANTINE_DELAY=3
+QUARANTINE_PERIOD=40
+QUARANTINE_DELAY=20
 # NONE, FIXED_PERCENTAGE, CONFIRMED_CARRIERS_ONLY
-QUARANTINE_TYPE=NONE
-QUARANTINE_PERCENTAGE=0.1
+QUARANTINE_TYPE=FIXED_PERCENTAGE
+QUARANTINE_PERCENTAGE=0.50
 
-TEST_RATE=30
+TEST_RATE=1500
 TEST_COOLDOWN=2
 
-NUM_ZONES = 25
+NUM_ZONES = 1
 # BASIC, BASIC_CAUTIOUS, ADVANCED_CAUTIOUS, FULL_LOCKDOWN
 ZONE_ISOLATION_BEHAVIOR=FULL_LOCKDOWN
-ZONE_ISOLATION_THRESHOLD=0.1
-ZONE_ISOLATION_TIMEOUT=15
+ZONE_ISOLATION_THRESHOLD=0.01
+ZONE_ISOLATION_TIMEOUT=20
 
-POPULATION_DENSITY=1
+POPULATION_DENSITY=0.6
